# alaankwa-corsairs

./: .clang-tidy  .clangd  .gitignore  CMakeLists.txt  README.md  run.bat  run.sh
include/: components.hpp  systems.hpp
src/: main.cpp  systems.cpp
